# algo

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
assessment/: Cargo.toml
assessment/src/: main.rs
assessment/src/cli/: show.rs
assessment/src/runtime/: merge.rs  mod.rs  orderbook.rs  providers.rs
binance/: Cargo.toml  README.md
binance/src/: lib.rs
bitstamp/: Cargo.toml  README.md
bitstamp/src/: lib.rs  orderbook.rs  provider.rs  response.rs  socket.rs
common/: Cargo.toml  build.rs
common/src/: config.rs  lib.rs  orderbook.proto  orderbook.rs  provider.rs
