[package]
name = "assessment"
version = "0.1.0"
authors = [ "acastiglia@gmail.com" ]
edition = "2021"
description = "assessment"

[features]
default = ["binance", "bitstamp"]
binance = ["dep:binance", "common/binance"]
bitstamp = ["dep:bitstamp", "common/bitstamp"]

[dependencies]
anyhow = "~1.0"
binance = { path = "../binance", version = "~0.1", optional = true }
bitstamp = { path = "../bitstamp", version = "~0.1", optional = true }
common = { path = "../common", version = "~0.1" }
env_logger = "~0.10"
log = "~0.4"
parking_lot = "~0.12"
tokio = { version = "~1.27", features = ["full"] }
tokio-stream = "~0.1"
tonic = "~0.9"
url = "~2.3"