[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = [ "acastiglia@gmail.com" ]
build = "build.rs"

[features]
default = ["binance", "bitstamp"]
binance = []
bitstamp = []

[dependencies]
anyhow = "~1.0"
clap = { version = "~4.2", features = [ "derive" ] }
prost = "~0.11"
tonic = "~0.9"
url = "~2.3"

[build-dependencies]
tonic-build = { version = "~0.9", features = ["prost-build"] }
